corrigindo bug to wrap text

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -29,3 +29,8 @@
   width: 60%;
   margin: 0 auto;
 }
+
+.wrapper-text {
+  word-wrap: break-word;
+  flex: inherit;
+}
